fix table extra space issue in apikeys

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -115,7 +115,7 @@ Table .ant-table-body {
     }
 }
 .ant-table-tbody {
-    tr {
+    tr:not(.ant-table-measure-row)  {
         height: 3.5rem !important;
         td {
             color: theme('colors.gray.DEFAULT') !important;
